--- a/docs/oss/quickstart/stay-updated.mdx
+++ b/docs/oss/quickstart/stay-updated.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Stay updated"
 sidebarTitle: "Stay updated"
+description: "Get notified about new features, breaking changes, and data quality tips"
 icon: "square-5"
 ---
 
@@ -62,94 +63,90 @@ Subscribe for release highlights, breaking change alerts, and best practices fro
   </form>
 </div>
 
-<script
-  dangerouslySetInnerHTML={{
-    __html: `
-      (function() {
-        const HUBSPOT_PORTAL_ID = '142608385';
-        const HUBSPOT_FORM_ID = '4734860b-68fb-4f7f-aada-afb14e61afe7';
+<script>{`
+  (function() {
+    const HUBSPOT_PORTAL_ID = '142608385';
+    const HUBSPOT_FORM_ID = '4734860b-68fb-4f7f-aada-afb14e61afe7';
+    
+    function initNewsletter() {
+      const form = document.getElementById('newsletter-signup-form');
+      const emailInput = document.getElementById('newsletter-email');
+      const submitButton = document.getElementById('newsletter-submit');
+      const container = document.getElementById('newsletter-signup-container');
+      
+      if (!form || !emailInput || !submitButton || !container) {
+        setTimeout(initNewsletter, 100);
+        return;
+      }
+      
+      submitButton.addEventListener('mouseenter', function() {
+        this.style.backgroundColor = '#E01A9F';
+      });
+      
+      submitButton.addEventListener('mouseleave', function() {
+        this.style.backgroundColor = '#FF20B8';
+      });
+      
+      form.addEventListener('submit', async function(e) {
+        e.preventDefault();
+        const email = emailInput.value;
+        if (!email) return;
         
-        function initNewsletter() {
-          const form = document.getElementById('newsletter-signup-form');
-          const emailInput = document.getElementById('newsletter-email');
-          const submitButton = document.getElementById('newsletter-submit');
-          const container = document.getElementById('newsletter-signup-container');
-          
-          if (!form || !emailInput || !submitButton || !container) {
-            setTimeout(initNewsletter, 100);
-            return;
-          }
-          
-          submitButton.addEventListener('mouseenter', function() {
-            this.style.backgroundColor = '#E01A9F';
-          });
-          
-          submitButton.addEventListener('mouseleave', function() {
-            this.style.backgroundColor = '#FF20B8';
-          });
-          
-          form.addEventListener('submit', async function(e) {
-            e.preventDefault();
-            const email = emailInput.value;
-            if (!email) return;
-            
-            submitButton.disabled = true;
-            submitButton.textContent = 'Subscribing...';
-            submitButton.style.opacity = '0.7';
-            submitButton.style.cursor = 'wait';
-            
-            const existingError = container.querySelector('.error-msg');
-            if (existingError) existingError.remove();
-            
-            try {
-              const res = await fetch(
-                'https://api.hsforms.com/submissions/v3/integration/submit/' + HUBSPOT_PORTAL_ID + '/' + HUBSPOT_FORM_ID,
-                {
-                  method: 'POST',
-                  headers: { 'Content-Type': 'application/json' },
-                  body: JSON.stringify({
-                    fields: [{ name: 'email', value: email }],
-                    context: {
-                      pageUri: window.location.href,
-                      pageName: 'Elementary Docs - Stay Updated',
-                    },
-                  }),
-                }
-              );
-              
-              if (res.ok) {
-                form.style.display = 'none';
-                const success = document.createElement('div');
-                success.style.cssText = 'padding: 14px 18px; border-radius: 8px; background-color: var(--tw-prose-pre-bg, #f0fdf4); border: 1px solid #bbf7d0; color: #15803d; font-size: 14px; line-height: 1.5;';
-                success.textContent = "You're in! We'll keep you posted on new releases and data quality tips.";
-                container.appendChild(success);
-              } else {
-                throw new Error('Submission failed');
-              }
-            } catch (error) {
-              submitButton.disabled = false;
-              submitButton.textContent = 'Subscribe';
-              submitButton.style.opacity = '1';
-              submitButton.style.cursor = 'pointer';
-              
-              const errorMsg = document.createElement('p');
-              errorMsg.className = 'error-msg';
-              errorMsg.style.cssText = 'width: 100%; color: #dc2626; font-size: 13px; margin: 4px 0 0;';
-              errorMsg.innerHTML = 'Something went wrong — try again or <a href="https://elementary-data.com/community" style="color: #dc2626; text-decoration: underline;">join Slack</a> instead.';
-              container.appendChild(errorMsg);
+        submitButton.disabled = true;
+        submitButton.textContent = 'Subscribing...';
+        submitButton.style.opacity = '0.7';
+        submitButton.style.cursor = 'wait';
+        
+        const existingError = container.querySelector('.error-msg');
+        if (existingError) existingError.remove();
+        
+        try {
+          const res = await fetch(
+            'https://api.hsforms.com/submissions/v3/integration/submit/' + HUBSPOT_PORTAL_ID + '/' + HUBSPOT_FORM_ID,
+            {
+              method: 'POST',
+              headers: { 'Content-Type': 'application/json' },
+              body: JSON.stringify({
+                fields: [{ name: 'email', value: email }],
+                context: {
+                  pageUri: window.location.href,
+                  pageName: 'Elementary Docs - Stay Updated',
+                },
+              }),
             }
-          });
+          );
+          
+          if (res.ok) {
+            form.style.display = 'none';
+            const success = document.createElement('div');
+            success.style.cssText = 'padding: 14px 18px; border-radius: 8px; background-color: var(--tw-prose-pre-bg, #f0fdf4); border: 1px solid #bbf7d0; color: #15803d; font-size: 14px; line-height: 1.5;';
+            success.textContent = "You're in! We'll keep you posted on new releases and data quality tips.";
+            container.appendChild(success);
+          } else {
+            throw new Error('Submission failed');
+          }
+        } catch (error) {
+          submitButton.disabled = false;
+          submitButton.textContent = 'Subscribe';
+          submitButton.style.opacity = '1';
+          submitButton.style.cursor = 'pointer';
+          
+          const errorMsg = document.createElement('p');
+          errorMsg.className = 'error-msg';
+          errorMsg.style.cssText = 'width: 100%; color: #dc2626; font-size: 13px; margin: 4px 0 0;';
+          errorMsg.innerHTML = 'Something went wrong — try again or <a href="https://elementary-data.com/community" style="color: #dc2626; text-decoration: underline;">join Slack</a> instead.';
+          container.appendChild(errorMsg);
         }
-        
-        if (document.readyState === 'loading') {
-          document.addEventListener('DOMContentLoaded', initNewsletter);
-        } else {
-          initNewsletter();
-        }
-      })();
-    `,
-  }}
-/>
+      });
+    }
+    
+    if (document.readyState === 'loading') {
+      document.addEventListener('DOMContentLoaded', initNewsletter);
+    } else {
+      initNewsletter();
+    }
+  })();
+`}</script>
 
 <Tip>
 
