--- a/docs/oss/quickstart/stay-updated.mdx
+++ b/docs/oss/quickstart/stay-updated.mdx
@@ -8,17 +8,17 @@ Elementary moves fast — stay in the loop on new releases, breaking changes, an
 
 ## Join the community
 
-Our Slack is where data teams share experiences, talk to the team and troubleshoot issues.
+Our Slack is where you'll hear about new releases, upcoming events, and get support from the team and community.
 
 <Card title="Join Slack" icon="slack" href="https://elementary-data.com/community" horizontal="true">
 
-  4,000+ data engineers and analytics engineers
+  4,000+ data and analytics engineers
 
 </Card>
 
 ## Subscribe to the newsletter
 
-Subscribe for release highlights, breaking change alerts, and best practices from teams running Elementary at scale.
+Subscribe for product highlights, breaking change alerts, and best practices from teams running Elementary at scale.
 
 <div id="newsletter-signup-container">
   <form id="newsletter-signup-form" style={{ display: 'flex', gap: '10px', flexWrap: 'wrap' }}>
