--- a/docs/oss/quickstart/stay-updated.mdx
+++ b/docs/oss/quickstart/stay-updated.mdx
@@ -55,7 +55,7 @@ export const NewsletterSignup = () => {
         fontSize: '14px',
         lineHeight: '1.5',
       }}>
-        You're in! We'll keep you posted on new releases and data quality tips.
+        You're in! We'll keep you posted.
       </div>
     );
   }
@@ -124,19 +124,19 @@ Elementary moves fast — stay in the loop on new releases, breaking changes, an
 
 ## Join the community
 
-Our Slack is where you'll hear about new releases, upcoming events, and get support from the team and community.
-
 <Card title="Join Slack" icon="slack" href="https://elementary-data.com/community" horizontal="true">
 
   4,000+ data and analytics engineers
 
 </Card>
 
-## Subscribe to the newsletter
+## Subscribe for updates
 
-Subscribe for product highlights, breaking change alerts, and best practices from teams running Elementary at scale.
+Subscribe for release notes, breaking change alerts, and best practices from teams running Elementary at scale.
 
 <NewsletterSignup />
+
+
 
 <Tip>
 
