Fix email input styling for light mode visibility

--- a/docs/oss/quickstart/stay-updated.mdx
+++ b/docs/oss/quickstart/stay-updated.mdx
@@ -72,9 +72,9 @@ export const NewsletterSignup = () => {
           flex: '1 1 260px',
           padding: '10px 14px',
           borderRadius: '8px',
-          border: '1px solid var(--border-color, #e5e7eb)',
-          backgroundColor: 'var(--tw-prose-pre-bg, #ffffff)',
-          color: 'inherit',
+          border: '1px solid #e5e7eb',
+          backgroundColor: '#ffffff',
+          color: '#111827',
           fontSize: '14px',
           lineHeight: '1.5',
           outline: 'none',
